<resources>
    <string name="app_name">Penny Wise</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password is incorrect</string>
    <string name="login_failed">"Login failed"</string>
    <string name="link_register">Don\'t have an account? Register</string>
    <string name="link_login">Already an account? Login</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="reports">Reports</string>
    <string name="budgets">Budgets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="back">back</string>
    <string name="d_02d_02d">%d-%02d-%02d</string>
</resources>